--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ layout: default
     {% endfor %}
   </ul>
 
-  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
+  <p class="rss-subscribe">RSS订阅 <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
+  <p>浙ICP备14028718号</p>
 
 </div>
